--- a/PSCI/dsc/ext/PsGallery/packages.config
+++ b/PSCI/dsc/ext/PsGallery/packages.config
@@ -18,9 +18,11 @@
   <package id="xSmbShare" version="2.0.0" />
   <package id="xSqlPs" version="1.4.0" />
   <package id="xSqlServer" version="7.0.0" />
+  <package id="xStorage" version="3.4.0" />
   <package id="xSystemSecurity" version="1.2.0" />
   <package id="xTimeZone" version="1.6.0" />
   <package id="xWebAdministration" version="1.17.0" />
   <package id="xWebDeploy" version="1.2.0" />
+  <package id="xWindowsUpdate" version="2.7.0" />
   <package id="xWinEventLog" version="1.1.0" />
 </packages>
