Added newer version of SqlServer DSC resource

--- a/PSCI/dsc/ext/PsGallery/packages.config
+++ b/PSCI/dsc/ext/PsGallery/packages.config
@@ -25,4 +25,5 @@
   <package id="xWebDeploy" version="1.2.0" />
   <package id="xWindowsUpdate" version="2.7.0" />
   <package id="xWinEventLog" version="1.1.0" />
+  <package id="SqlServerDsc" version="11.2.0" />
 </packages>
