--- a/PSCI/dsc/ext/PsGallery/packages.config
+++ b/PSCI/dsc/ext/PsGallery/packages.config
@@ -26,4 +26,5 @@
   <package id="xWindowsUpdate" version="2.7.0" />
   <package id="xWinEventLog" version="1.1.0" />
   <package id="SqlServerDsc" version="11.2.0" />
+  <package id="SqlServer" version="21.0.17262" />
 </packages>
